@@ -1,3 +1,8 @@
+2012-01-02 Mon  Jari Aalto  <jari.aalto@cante.net>
+
+	* tiny/tinydebian.el (tinydebian-bts-mail-compose-macro):
+	Fix `mail-setup' for Emacs 24.x.
+
 2012-01-01 Sun  Jari Aalto  <jari.aalto@cante.net>
 
 	* tiny/tinydesk.el (tinydesk--save-exclude-regexp): Exclude
